--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="0;url=https://abhisiddanthi.github.io/Bharat_Miles/src/html/index.html" />
+        <meta http-equiv="refresh" content="0;url=https://bharatmiles.github.io/website/src/html/index.html" />
     </head>
 </html>
